# conflict-marker-check

./: .gitignore  CMakeLists.txt  LICENSE  README.md  makefile
examples/: sample.sh  sample1.php  target.js
src/: CMakeLists.txt  main.cpp  makefile
src/classes/: Conflict.cpp  Conflict.hpp  ConflictMarker.cpp  ConflictMarker.hpp  File.cpp  File.hpp  MessageBase.cpp  MessageBase.hpp  Status.cpp  Status.hpp
tests/: Conflict.cpp
